--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "multi-step-form",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
+	"name": "multi-step-form",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"homepage": "https://j-0-n-e-z.github.io/multi-step-form",
+	"scripts": {
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d dist",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "formik": "^2.2.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "classnames": "^2.3.2",
-    "sass": "^1.58.3",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  }
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"formik": "^2.2.9",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"@vitejs/plugin-react": "^3.1.0",
+		"classnames": "^2.3.2",
+		"gh-pages": "^5.0.0",
+		"sass": "^1.58.3",
+		"typescript": "^4.9.3",
+		"vite": "^4.1.0"
+	}
 }
